[SCB-2481] Make test paas on jdk11 (#2822)